Wed Nov 13 18:19:07 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/03_executors.html:
          Added missing commandline flags to specify the export file and macro
          when generating the starter code

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Control_comp/src/Shapes_Control_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Receiver_comp/src/Shapes_Receiver_comp.mpc:
        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Sender_comp/src/Shapes_Sender_comp.mpc:
          Added missing commandline flags to specify the export file and macro
          when generating the starter code

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Control_comp/Shapes_Control_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Control_comp/Shapes_Control_comp_exec.cpp:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Receiver_comp/Shapes_Receiver_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Receiver_comp/Shapes_Receiver_comp_exec.cpp:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Sender_comp/Shapes_Sender_comp_exec.h:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/Code/Shapes_Sender_comp/Shapes_Sender_comp_exec.cpp:
          Regenerated with the latest flags

Mon Nov 11 09:43:10 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Prepare for next release

Mon Nov 11 09:17:34 CET 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO version 1.2.3 released.

Fri Nov  8 12:15:15 UTC 2013  Marijke Hengstmengel  <MHengstmengel@remedy.nl>

        * CIAO-INSTALL.html:
        * NEWS:
        Added information about Android port

Mon Nov  4 14:13:28 UTC 2013  Marijke Hengstmengel  <MHengstmengel@remedy.nl>

        * docs/CIAO_android_port.html:
        Added environment variables
